--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Blank Template",
-    "slug": "my-new-project",
+    "slug": "crud-react-native",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
